--- a/index.html
+++ b/index.html
@@ -15,8 +15,54 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Música para todos - Spotify</title>
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
 </head>
 <body>
+
+    <header> <!--Barra de Navegação-->
+        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <img src="imagens/spotify.svg" width="142" alt="">
+                </a>
+            
+
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                    <i class="fas fa-bars text-white"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="nav-principal">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Premium</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Ajuda</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Baixar</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Increver-se</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Entrar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header> <!-- FIM Barra de Navegação-->
+
+
+
+
+
+
+
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
 
