--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
 <body>
 
     <header> <!--Barra de Navegação-->
-        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
             <div class="container">
                 <a href="index.html" class="navbar-brand">
                     <img src="imagens/spotify.svg" width="142" alt="">
                 </a>
-            
 
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav-principal" aria-expanded="false" aria-controls="nav-principal">
                     <i class="fas fa-bars text-white"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-principal">
@@ -43,6 +42,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Baixar</a>
                         </li>
+
+                        <li class="nav-item divisor"></li>
 
                         <li class="nav-item">
                             <a class="nav-link" href="#">Increver-se</a>
