--- a/index.html
+++ b/index.html
@@ -58,8 +58,150 @@
         </nav>
     </header> <!-- FIM Barra de Navegação-->
 
+    <!-- Início CAPA -->
+    <section id="home" class="d-flex"> 
+        <div class="container align-self-center">
+            <div class="row">
+                <div class="col-md-12 capa">
+                    <h1>Música para todos</h1>
+                    <a href="#" class="btn btn-lg btn-custom btn-roxo">Aproveite o Spotify Free</a>
+                    <a href="#" class="btn btn-lg btn-custom btn-branco">Obter Spotify Premium</a>
+                </div>
+            </div>
+        </div>
 
+    </section>
+     <!-- FIM CAPA -->
 
+     <!-- Início CONTEUDO -->
+     <section id="servicos" class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    
+                    <div class="row albuns">
+                        <div class="col-md-6">
+                            <img src="imagens/img1.jpg" alt="" class="img-fluid d-none d-md-block">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="imagens/img2.jpg" alt="" class="img-fluid d-none d-md-block">
+                        </div>
+                    </div>
+
+                    <div class="row albuns">
+                        <div class="col-md-6">
+                            <img src="imagens/img3.jpg" alt="" class="img-fluid d-none d-md-block">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="imagens/img4.jpg" alt="" class="img-fluid d-none d-md-block">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <h2>O que o Spotify tem?</h2>
+                    <h3>Músicas</h3>
+                    <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reuna seus favoritos em um só lugar.</p>
+
+                    <h3>Playlist</h3>
+                    <p>No Spotify você encontra uma playlist apra cada momento. Todas feitas por fanaticos e especialistas da música.</p>
+
+                    <h3>Novos lançamentos</h3>
+                    <p>Escute os novos lançamentos de single e álbuns da semana e veja o que está bombando no Top 50.</p>
+                </div>
+            </div>
+        </div>
+     </section>
+     <!-- FIM CONTEUDO -->
+
+     <!-- Início CONTEUDO 2 -->
+     <section id="recursos" class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Fácil</h2>
+                    <h3>Buscar</h3>
+                    <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+                    <h3>Navegar</h3>
+                    <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+                    <h3>Descobrir</h3>
+                    <p>Curta músicas novas toda segunda-feira com uma playlist personalizada para você. Ou relaxe e curta uma das rádios.</p>
+                </div>
+
+                <div class="col-md-8">
+                    <div class="row rotacionar">
+                        <div class="col-md-6">
+                            <img src="imagens/iphone1.png" alt="" class="img-fluid">
+                        </div>
+
+                        <div class="col-md-6">
+                            <img src="imagens/iphone2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+     </section>
+     <!-- FIM CONTEUDO 2 -->
+
+     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="imagens/spotify.svg" alt="" width="142">
+                </div>
+                <div class="col-md-2">
+                    <h4>Company</h4>
+                        <ul class="navbar-nav">
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Empregos</a></li>
+                            <li><a href="#">Imprensa</a></li>
+                            <li><a href="#">Novidades</a></li>
+                        </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4>Comunidade</h4>
+                        <ul class="navbar-nav">
+                            <li><a href="#">Artistas</a></li>
+                            <li><a href="#">Desenvolvedores</a></li>
+                            <li><a href="#">Marcas</a></li>
+                        </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4>Links Uteis</h4>
+                        <ul class="navbar-nav">
+                            <li><a href="#">Ajuda</a></li>
+                            <li><a href="#">Presentes</a></li>
+                            <li><a href="#">Player da web</a></li>
+                        </ul>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="imagens/facebook.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="imagens/instagram.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="imagens/twitter.png" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </footer>
 
 
 
